force-app/main/default/objects/Time_Record__c/Time_Record__c.object-meta.xml
<CustomObject>
    <description>Time can be associated to projects, team member assignments, and date ranges for project status, costing and other reporting purposes.  Both internal and external time can be tracked with a lookup to either a user or a contact record for internal staff or external contractors respectively.</description>
    <label>Time Record</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Time Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>