force-app/main/default/objects/Time_Record__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related to a contact record.</inlineHelpText>
    <label>Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Records</relationshipLabel>
    <relationshipName>R00N80000002lYQJEA2</relationshipName>
    <type>Lookup</type>
</CustomField>