force-app/main/default/objects/Time_Record__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related to User Record.</inlineHelpText>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N80000002lYQIEA2</relationshipName>
    <type>Lookup</type>
</CustomField>