force-app/main/default/objects/Time_Record__c/fields/Team_Member_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member Assignment</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Time Records</relationshipLabel>
    <relationshipName>R00N80000002lYkfEAE</relationshipName>
    <type>Lookup</type>
</CustomField>